Closed Bug 1655038 Opened 5 years ago Closed 5 years ago

Mac printing code in nsDeviceContextSpecX.mm leaks CoreFoundation references

Categories

(Core :: Printing: Output, defect)

Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox81 --- fixed

People

(Reporter: jfkthame, Assigned: jfkthame)

Details

Attachments

(1 file)

CF memory management rules say that references we get from Create and Copy APIs need to be released by the caller. It looks like the code here doesn't do this, so we'll leak some objects.

Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/767fc31457ce Fix some leaks of Core Foundation references in Mac printing code. r=jwatt
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: