Bug 1655038 - Fix some leaks of Core Foundation references in Mac printing code. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D84826